--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Treasure hunt</title>
+    <title>Treasure Hunt</title>
     <style>
         body {
-            display:flex;
+            display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            background: #f0f8ff
+            background: #f0f8ff;
             font-family: Arial, sans-serif;
-}
-
-.container {
-text-align: center;
-background: #fff
-
-padding: 50px;
-border-radius: 10px;
-box shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-h1 {
+        }
+        .container {
+            text-align: center;
+            background: #fff;
+            padding: 50px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        h1 {
             font-size: 2.5em;
             color: #333;
         }
@@ -45,15 +42,13 @@ h1 {
         button:hover {
             background: #218838;
         }
-
     </style>
 </head>
 <body>
-    <div>
+    <div class="container">
         <h1>WELCOME TO THE TREASURE HUNT</h1>
         <p>Click the button below to start the game</p>
         <button onclick="window.location.href='game.php'">Start Game</button>
-
     </div>
 </body>
 </html>
