--- a/index.html
+++ b/index.html
@@ -3,52 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <title>Treasure Hunt</title>
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background: #f0f8ff;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            text-align: center;
-            background: #fff;
-            padding: 50px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        h1 {
-            font-size: 2.5em;
-            color: #333;
-        }
-        p {
-            font-size: 1.2em;
-            color: #555;
-        }
-        button {
-            background: #28a745;
-            color: #fff;
-            padding: 15px 30px;
-            font-size: 1.2em;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        button:hover {
-            background: #218838;
-        }
+        
     </style>
 </head>
 <body>
     <div class="container">
         <h1>WELCOME TO THE TREASURE HUNT</h1>
-        <p>Click the button below to start the game</p>
-        <button onclick="window.location.href='game.php'">Start Game</button>
+        <p class="text-size-1">
+            In this treasure hunt you will have to find clues hidden around our University campus. 
+            Each clue will lead you to the next clue until you find the treasure.
+            Be careful, some clues are harder to find than others
+            Through this treasure hunt you get to learn about the our University and explore various locations
+        </p>
+        <p class="text-size-2">Good luck and have fun!</p>
+        <button onclick="window.location.href='html/app.html'">Start Game</button>
     </div>
 </body>
 </html>
