--- a/index.html
+++ b/index.html
@@ -10,16 +10,26 @@
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>WELCOME TO THE TREASURE HUNT</h1>
-        <p class="text-size-1">
-            In this treasure hunt you will have to find clues hidden around our University campus. 
-            Each clue will lead you to the next clue until you find the treasure.
-            Be careful, some clues are harder to find than others
-            Through this treasure hunt you get to learn about the our University and explore various locations
-        </p>
-        <p class="text-size-2">Good luck and have fun!</p>
-        <button onclick="window.location.href='html/app.html'">Start Game</button>
+    <div class="grid-container">
+        <div class="container grid-item">
+            <h1>WELCOME TO THE TREASURE HUNT</h1>
+            <div class="inv-box">
+                <p class="text-size-1">
+                    In this treasure hunt you will have to find clues hidden around our University campus. 
+                    Each clue will lead you to the next clue until you find the treasure.
+                    Be careful, some clues are harder to find than others
+                    Through this treasure hunt you get to learn about the our University and explore various locations
+                </p>
+            </div>
+
+            <p class="text-size-2">Good luck and have fun!</p>
+            <button onclick="window.location.href='html/app.html'">Start Game</button>
+        </div>
+
+        <div class="grid-item">
+                <p>Created by Dogush</p>
+        </div>
     </div>
 </body>
+
 </html>
