--- a/index.html
+++ b/index.html
@@ -14,22 +14,29 @@
         <div class="container grid-item">
             <h1>WELCOME TO THE TREASURE HUNT</h1>
             <div class="inv-box">
+                <p class="text-size-2 bold">Our project's scope</p>
                 <p class="text-size-1">
                     In this treasure hunt you will have to find clues hidden around our University campus. 
                     Each clue will lead you to the next clue until you find the treasure.
                     Be careful, some clues are harder to find than others
                     Through this treasure hunt you get to learn about the our University and explore various locations
                 </p>
+                <article>
+                    <h2>Find us on Instagram and Twitter</h2>
+                    <!-- TODO: Add social media Icons and links here and when you publish the posts add the posts so it shows on page  -->
+                    <p>Instagram: @treasurehunt</p>
+                 </article>
             </div>
 
             <p class="text-size-2">Good luck and have fun!</p>
-            <button onclick="window.location.href='html/app.html'">Start Game</button>
+            <button id='continue-btn'>Continue</button>
         </div>
 
         <div class="grid-item">
                 <p>Created by Dogush</p>
+                <!-- Add social media images and links here -->
         </div>
     </div>
 </body>
-
+<script src="js/index.js"></script>
 </html>
