--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
 
             <p class="text-size-2">Good luck and have fun!</p>
-            <button id='continue-btn'>Continue</button>
+            <button class="button" id='continue-btn'>Continue</button>
         </div>
 
         <div class="grid-item">
