--- a/html/app.html
+++ b/html/app.html
@@ -13,6 +13,7 @@
         <div class="container grid-item">
             <div>
                 <p class="text-size-3 bold">Available treasure hunts</p>
+                <p>Please sellect one</p>
             </div>
             <div>
             <table id="hunts-table" class="hunts">
