--- a/html/questions.html
+++ b/html/questions.html
@@ -12,7 +12,7 @@
     <div class="grid-container">
         <div class="container grid-item">
 
-            <div>
+            <div class="center">
                 <div class="scoreBox" id="box">
                     Score: <span class="score" id="score">0</span>
                 </div>
@@ -26,8 +26,8 @@
                 <div class="center" >
                     <button id="submit-btn" class="submit-btn" id='submit-btn'>Submit</button>
                     
-                    <button id="true-btn" class="submit-btn" id='true-btn'>True</button>
-                    <button id="false-btn" class="submit-btn" id='false-btn'>False</button>    
+                    <button id="true-btn" class="true-btn" id='true-btn'>True</button>
+                    <button id="false-btn" class="false-btn" id='false-btn'>False</button>    
                         
                     <button id="mcq-A-btn" class="submit-btn" id='hint-btn'>A</button>
                     <button id="mcq-B-btn" class="submit-btn" id='hint-btn'>B</button>
