--- a/html/app.html
+++ b/html/app.html
@@ -8,7 +8,7 @@
 
     <title>Treasure Hunt - Game</title>
 </head>
-<body>
+<body class="body-other">
     <div class="grid-container">
         <div class="container grid-item">
             <div>
@@ -32,6 +32,7 @@
                     </th>
                 </tr>
             </table>
+            <p class="h3" id="loading">Fetcing active hunts!</p>
             </div>
         </div>
     </div>
