--- a/html/congratulations.html
+++ b/html/congratulations.html
@@ -1,1 +1,29 @@
-Congrats
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../css/index.css">
+    <title>Treasure Hunt</title>
+    <style>
+        
+    </style>
+</head>
+<body class="body-other">
+    <div class="grid-container">
+        <div class="container grid-item">
+            <h1>Congratulations you completed the hunt!</h1>
+            <div class="inv-box">
+                <p class="text-size-2 bold">Thank you for playing our game!</p>
+            </div>
+
+            <button class="button" id='restart-btn'>Restart</button>
+        </div>
+
+        <div class="grid-item">
+                <p>Created by Dogush Tabiyat</p>
+        </div>
+    </div>
+</body>
+<script src="../js/finish.js"></script>
+</html>
