--- a/html/pre_start.html
+++ b/html/pre_start.html
@@ -9,7 +9,7 @@
 
     <title>Treasure Hunt - Player information</title>
 </head>
-<body>
+<body class="body-other">
     <div class="grid-container">
         <div class="container grid-item">
 
