--- a/html/questions.html
+++ b/html/questions.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../css/questions.css">
     <title>Treasure Hunt - Player information</title>
 </head>
-<body>
+<body class="body-other">
     <div class="grid-container">
         <div class="container grid-item">
 
