--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Treasure Hunt</title>
     <style>
         
     </style>
 </head>
-<body>
+<body class="body-other">
     <div class="grid-container">
         <div class="container grid-item">
             <h1>WELCOME TO THE TREASURE HUNT</h1>
@@ -23,18 +24,20 @@
                 </p>
                 <article>
                     <h2>Find us on Instagram and Twitter</h2>
-                    <!-- TODO: Add social media Icons and links here and when you publish the posts add the posts so it shows on page  -->
-                    <p>Instagram: @treasurehunt</p>
+                    <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.instagram.com%2Ftreasurehunt_uclan_by_dogush%3Figsh%3Db2tmeG1tdnVxbDI2%26fbclid%3DIwZXh0bgNhZW0CMTAAAR3EMtUScTohJ_eIjvguPkIu880H75FJlTETsyDmo0AxmIDHM72EV0VQgB0_aem_euEpiHvYTV1A2gd81gKBlQ&h=AT0CrmnJqPdV_XpGFyUyCecvj48TScnB2COkQp8yHzWevyqN1SpSSlcNV6onAJGTPjr8ivrqebkHNPNWOSiOxEPhmW2st5IshAusizJjatsNWIMUZsXtGxRrriTB-iJTC5tLpgly4q0"><i class="fa-brands fa-instagram fa-2xl"></i></a> 
+                    <a><i class="fa-brands fa-twitter fa-2xl"></i></a> 
                  </article>
             </div>
 
             <p class="text-size-2">Good luck and have fun!</p>
             <button class="button" id='continue-btn'>Continue</button>
         </div>
-
         <div class="grid-item">
+            <p>Follow us on Social</p>
+
+            <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.instagram.com%2Ftreasurehunt_uclan_by_dogush%3Figsh%3Db2tmeG1tdnVxbDI2%26fbclid%3DIwZXh0bgNhZW0CMTAAAR3EMtUScTohJ_eIjvguPkIu880H75FJlTETsyDmo0AxmIDHM72EV0VQgB0_aem_euEpiHvYTV1A2gd81gKBlQ&h=AT0CrmnJqPdV_XpGFyUyCecvj48TScnB2COkQp8yHzWevyqN1SpSSlcNV6onAJGTPjr8ivrqebkHNPNWOSiOxEPhmW2st5IshAusizJjatsNWIMUZsXtGxRrriTB-iJTC5tLpgly4q0"><i class="fa-brands fa-instagram fa-2xl"></i></a> 
+            <a><i class="fa-brands fa-twitter fa-2xl"></i></a> 
                 <p>Created by Dogush</p>
-                <!-- Add social media images and links here -->
         </div>
     </div>
 </body>
