--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <article>
                     <h2>Find us on Instagram and Twitter</h2>
                     <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.instagram.com%2Ftreasurehunt_uclan_by_dogush%3Figsh%3Db2tmeG1tdnVxbDI2%26fbclid%3DIwZXh0bgNhZW0CMTAAAR3EMtUScTohJ_eIjvguPkIu880H75FJlTETsyDmo0AxmIDHM72EV0VQgB0_aem_euEpiHvYTV1A2gd81gKBlQ&h=AT0CrmnJqPdV_XpGFyUyCecvj48TScnB2COkQp8yHzWevyqN1SpSSlcNV6onAJGTPjr8ivrqebkHNPNWOSiOxEPhmW2st5IshAusizJjatsNWIMUZsXtGxRrriTB-iJTC5tLpgly4q0"><i class="fa-brands fa-instagram fa-2xl"></i></a> 
-                    <a><i class="fa-brands fa-twitter fa-2xl"></i></a> 
+                    <a href="http://x.com/DogushT"><i class="fa-brands fa-twitter fa-2xl"></i></a> 
                  </article>
             </div>
 
@@ -36,7 +36,7 @@
             <p>Follow us on Social</p>
 
             <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.instagram.com%2Ftreasurehunt_uclan_by_dogush%3Figsh%3Db2tmeG1tdnVxbDI2%26fbclid%3DIwZXh0bgNhZW0CMTAAAR3EMtUScTohJ_eIjvguPkIu880H75FJlTETsyDmo0AxmIDHM72EV0VQgB0_aem_euEpiHvYTV1A2gd81gKBlQ&h=AT0CrmnJqPdV_XpGFyUyCecvj48TScnB2COkQp8yHzWevyqN1SpSSlcNV6onAJGTPjr8ivrqebkHNPNWOSiOxEPhmW2st5IshAusizJjatsNWIMUZsXtGxRrriTB-iJTC5tLpgly4q0"><i class="fa-brands fa-instagram fa-2xl"></i></a> 
-            <a><i class="fa-brands fa-twitter fa-2xl"></i></a> 
+            <a href="http://x.com/DogushT"><i class="fa-brands fa-twitter fa-2xl"></i></a> 
                 <p>Created by Dogush</p>
         </div>
     </div>
